# xai-systems-engineer-showcase

./: README.md
distributed_kv/: Cargo.toml  README.md  build.rs
distributed_kv/src/: distributed_kv.proto  main.rs
distributed_kv/src/raft/: mod.rs  store.rs
docs/: banner.d2  distributed_kv_architecture.d2  distributed_kv_architecture.mmd  distributed_kv_architecture.puml  kv_store_gui.d2  net_forensics_architecture.d2  project_overview.d2  sandbox_architecture.d2  sandbox_architecture.mmd
net_forensics/: Cargo.toml  README.md
net_forensics/src/: main.rs
sandbox/: Cargo.toml  README.md  resource_usage.json  test.py  visualize.py
sandbox/src/: main.rs
slides/: conclusion.html  distributed_kv.html  intro.html  net_forensics.html  sandbox.html  tech_stack.html  visualizations.html
